# kfc-ml

./: Cargo.toml  generate-coz-profile.sh  generate-flamegraph.sh  requirements.txt  setup.sh
.github/workflows/: run-unit-tests.yaml
model/: adagrad.py  board.py  model.py  pytest.py
src/: board_representation.rs  imports.rs  main.rs  minimax.rs  model.py  sequential.rs  util.rs
src/board_representation/: board_representation_tests.rs  mod.rs
src/game/: board.rs  board_util.rs  mod.rs  piece.rs  pieces.rs  position.rs  step_tests.rs  tests.rs
src/minimax/: minimax_tests.rs  mod.rs
src/sequential/: mod.rs  sequential_tests.rs
src/util/: mod.rs  util_tests.rs
