[package]
name = "kfc-ml"
version = "0.1.0"
edition = "2022"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
enum-map = "2.4.1"
lazy_static = "1.4.0"
ld4-expect = { path = "../ld4-expect" }
itertools = "0.10.5"
coz = "0.1"

[dependencies.pyo3]
version = "0.17.2"
features = ["auto-initialize"]

[profile.release-with-debug]
inherits = "release"
debug = true